Fixed the header issue on mobile completely. Closed.

--- a/themes/nodebb-theme-vanilla/less/bootstrap/navbar.less
+++ b/themes/nodebb-theme-vanilla/less/bootstrap/navbar.less
@@ -97,8 +97,8 @@
 .container-fluid {
   > .navbar-header,
   > .navbar-collapse {
-    margin-right: -@navbar-padding-horizontal;
-    margin-left:  -@navbar-padding-horizontal;
+    margin-right: @navbar-padding-horizontal;
+    margin-left:  @navbar-padding-horizontal;
 
     @media (min-width: @grid-float-breakpoint) {
       margin-right: 0;
